--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav-bar></app-nav-bar>
 
 <div class="container" style="margin-top: 140px;">
-    <h1>{{ title }}</h1>
+    <app-shop></app-shop>
 </div>
